[gd_scene load_steps=2 format=2]

[ext_resource path="res://CompiAgent/OOAEditor.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MenuButton" type="MenuButton" parent="VBoxContainer"]
margin_right = 35.0
margin_bottom = 20.0
size_flags_horizontal = 0
text = "File"
items = [ "Open ...", null, 0, false, false, 0, 0, null, "", false, "Save", null, 0, false, false, 1, 0, null, "", false, "Save as ...", null, 0, false, false, 2, 0, null, "", false ]

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 1080.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/VSplitContainer"]
margin_right = 1080.0
margin_bottom = 506.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.26
split_offset = 200

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VSplitContainer/HSplitContainer"]
margin_right = 734.0
margin_bottom = 506.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelName" type="Label" parent="VBoxContainer/VSplitContainer/HSplitContainer/VBoxContainer"]
margin_right = 734.0
margin_bottom = 14.0
text = "Name:"

[node name="LineEditName" type="LineEdit" parent="VBoxContainer/VSplitContainer/HSplitContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 734.0
margin_bottom = 42.0

[node name="LabelDescription" type="Label" parent="VBoxContainer/VSplitContainer/HSplitContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 734.0
margin_bottom = 60.0
text = "Description:"

[node name="LineEditDescription" type="LineEdit" parent="VBoxContainer/VSplitContainer/HSplitContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 734.0
margin_bottom = 88.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VSplitContainer/HSplitContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 734.0
margin_bottom = 92.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/VSplitContainer/HSplitContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 734.0
margin_bottom = 100.0

[node name="ButtonAddProperty" type="Button" parent="VBoxContainer/VSplitContainer/HSplitContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 734.0
margin_bottom = 124.0
text = "Add Property"

[node name="ButtonSaveConcept" type="Button" parent="VBoxContainer/VSplitContainer/HSplitContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 734.0
margin_bottom = 148.0
text = "Save Concept"

[node name="ButtonNewConcept" type="Button" parent="VBoxContainer/VSplitContainer/HSplitContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 734.0
margin_bottom = 172.0
text = "New Concept"

[node name="Tree" type="Tree" parent="VBoxContainer/VSplitContainer/HSplitContainer"]
margin_left = 746.0
margin_right = 1080.0
margin_bottom = 506.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer/VSplitContainer"]
margin_top = 518.0
margin_right = 1080.0
margin_bottom = 696.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.45

[node name="RichTextLabel2" type="RichTextLabel" parent="VBoxContainer/VSplitContainer/VSplitContainer"]
margin_right = 1080.0
margin_bottom = 178.0
size_flags_vertical = 3
text = "Tests"
